# HttpServer2

./: .gitignore
src/: CMakeLists.txt  export.h  httpapihelper.cpp  httpapihelper.h  httpexception.cpp  httpexception.h  httprequest.cpp  httprequest.h  httprequesthandler.cpp  httprequesthandler.h  httprequesthandlerfactory.cpp  httprequesthandlerfactory.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h  project_pch.h  servermonitor.cpp  servermonitor.h  serveroptions.cpp  serveroptions.h  templates.qrc  userconstants.cpp  userconstants.h
src/Handlers/: commoncommandhandler.cpp  commoncommandhandler.h  datacommandhandler.cpp  datacommandhandler.h  filesystemrequesthandler.cpp  filesystemrequesthandler.h  phphandler.cpp  phphandler.h  restapihandler.cpp  restapihandler.h
src/WebSocketApi/: WebSocketApi.pri  basewshandler.cpp  basewshandler.h  websocketapi.cpp  websocketapi.h  websocketserver.cpp  websocketserver.h  websocketserverp.cpp  websocketserverp.h
src/WebSocketApi/models/: baserequest.cpp  baserequest.h  baseresult.cpp  baseresult.h  commandrequest.cpp  commandrequest.h  commandresult.cpp  commandresult.h  enums.cpp  enums.h  objectrequest.cpp  objectrequest.h  objectresult.cpp  objectresult.h
src/api/: baseobjecthandler.cpp  baseobjecthandler.h  icommandhandler.cpp  icommandhandler.h  ihandler.cpp  ihandler.h  iobjecthandler.cpp  iobjecthandler.h  responceinfo.cpp  responceinfo.h
src/priv/: asynctcpserver.cpp  asynctcpserver.h  connectionworker.cpp  connectionworker.h  gzipstreamer.cpp  gzipstreamer.h  httprequestimpl.cpp  httprequestimpl.h  httpresponseimpl.cpp  httpresponseimpl.h  httpserverp.cpp  httpserverp.h  utils.cpp  utils.h
src/templates/: directory.html  notFound.html
